fix: text-reveal on horizontal scroll

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -468,7 +468,7 @@ a {
                 margin-right: vw(64);
             }
 
-            div {
+            .presentation {
                 width: vw(580);
                 height: vw(820);
                 border-radius: 14px;
